--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 <body>
 	<div class="container">
 	
+		<!-- MENU -->
+		<nav class="ui menu">
+			<li><a href="index.html" class="active item">Hello</a></li>
+			<li><a href="resume.html" class="item">Resume</a></li>
+			<li><a href="portfolio.html" class="item">Portfolio</a></li>
+		</nav>
 	</div>
 </body>
 </html>
