Create header section

--- a/index.html
+++ b/index.html
@@ -19,6 +19,16 @@
 			<li><a href="resume.html" class="item">Resume</a></li>
 			<li><a href="portfolio.html" class="item">Portfolio</a></li>
 		</nav>
+
+		<!-- HEADER -->
+		<header>
+			<div class="intro">
+				<h1>Batman</h1>
+				<p>Crime Fighter</p>
+			</div>
+			<img src="./assets/img/batman-color-hi.png" alt="Batman" class="img round">
+		</header>
+
 	</div>
 </body>
 </html>
