Create social media section

--- a/index.html
+++ b/index.html
@@ -29,6 +29,28 @@
 			<img src="./assets/img/batman-color-hi.png" alt="Batman" class="img round">
 		</header>
 
+
+		<!-- SOCIAL MEDIA -->
+		<section class="socialMedia">
+			<li class="socialItem">
+				<a href="" class="socialIcon">
+					<i class="icon circular big"></i>
+				</a>
+				<span class="socialLink">www.behance.com/Batman</span>
+			</li>
+			<li class="socialItem">
+				<a href="" class="socialIcon">
+					<i class="icon circular big"></i>
+				</a>
+				<span class="socialLink">www.linkedIn.com/Batman</span>
+			</li>
+			<li class="socialItem">
+				<a href="" class="socialIcon">
+					<i class="icon circular big"></i>
+				</a>
+				<span class="socialLink">www.twitter.com/Batman</span>
+			</li>
+		</section>
 	</div>
 </body>
 </html>
