Create footer section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	<div class="container">
-	
+
 		<!-- MENU -->
 		<nav class="ui menu">
 			<li><a href="index.html" class="active item">Hello</a></li>
@@ -51,6 +51,18 @@
 				<span class="socialLink">www.twitter.com/Batman</span>
 			</li>
 		</section>
+
+		<!-- FOOTER -->
+		<footer>
+			<section class="address">
+				<span>1007 Mountain Drive, Gotham, IL 60035 </span>
+				<span>1 (314) 684-3970</span>
+				<span>thebat@cave.com</span>
+			</section>
+
+			<span class="website">www.batman.com</span>
+		</footer>
+
 	</div>
 </body>
 </html>
