Add basic page info from index

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,1 +1,68 @@
-PORTFOLIO
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<title>Portfolio</title>
+
+	<!-- CSS -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.css">
+	<link rel="stylesheet" href="./assets/css/styles.css">
+</head>
+<body>
+	<div class="container">
+
+		<!-- MENU -->
+		<nav class="ui menu">
+			<li><a href="index.html" class="item">Hello</a></li>
+			<li><a href="resume.html" class="item">Resume</a></li>
+			<li><a href="portfolio.html" class="active item">Portfolio</a></li>
+		</nav>
+
+		<!-- HEADER -->
+		<header>
+			<div class="intro">
+				<h1>Batman</h1>
+				<p>Crime Fighter</p>
+			</div>
+			<img src="./assets/img/batman-color-hi.png" alt="Batman" class="img round">
+		</header>
+
+
+		<!-- SOCIAL MEDIA -->
+		<section class="socialMedia">
+			<li class="socialItem">
+				<a href="" class="socialIcon">
+					<i class="icon circular big"></i>
+				</a>
+				<span class="socialLink">www.behance.com/Batman</span>
+			</li>
+			<li class="socialItem">
+				<a href="" class="socialIcon">
+					<i class="icon circular big"></i>
+				</a>
+				<span class="socialLink">www.linkedIn.com/Batman</span>
+			</li>
+			<li class="socialItem">
+				<a href="" class="socialIcon">
+					<i class="icon circular big"></i>
+				</a>
+				<span class="socialLink">www.twitter.com/Batman</span>
+			</li>
+		</section>
+
+		<!-- FOOTER -->
+		<footer>
+			<section class="address">
+				<span>1007 Mountain Drive, Gotham, IL 60035 </span>
+				<span>1 (314) 684-3970</span>
+				<span>thebat@cave.com</span>
+			</section>
+
+			<span class="website">www.batman.com</span>
+		</footer>
+
+	</div>
+</body>
+</html>
