Add cover letter info

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Resume Template</title>
+	<title>Batman Resume</title>
 
 	<!-- CSS -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.css">
@@ -28,6 +28,43 @@
 			</div>
 			<img src="./assets/img/batman-color-hi.png" alt="Batman" class="img round">
 		</header>
+
+		<!-- MAIN -->
+		<section class="main">
+			<aside class="additionalInfo">
+				<div class="hrContact">
+					<h4>To</h4>
+				<p>James Gordon </br>
+					Police Commissioner </br>
+					Gotham City Police Department </br>
+					1 Gotham County </br>
+					Gotham City </br>
+					IL 60035
+				</p>
+				<h4>Position</h4>
+				<p>Hero</p>
+				<h4>Reference No.</h4>
+				<p>APP012358869</p>
+				<h4>Date</h4>
+				<p>11th January 2018</p>
+				</div>
+			</aside>
+
+			<!-- MAIN SECTION -->
+			<section class="main">
+				<div class="coverLetter">
+					<p>Dear Commissioner Gordon</p>
+					<p>Bats frighten me. It's time my enemies shared my dread.No guns, no killing. The first time I stole so that I wouldn't starve, yes. I lost many assumptions about the simple nature of right and wrong. And when I traveled I learned the fear before a crime and the thrill of success. But I never became one of them. Someone like you. Someone who'll rattle the cages.</p>
+					<p>I'm not wearing hockey pads. Hero can be anyone. Even a man knowing something as simple and reassuring as putting a coat around a young boy shoulders to let him know the world hadn't ended. Accomplice? I'm gonna tell them the whole thing was your idea.</p>
+					<p>The first time I stole so that I wouldn't starve, yes. I lost many assumptions about the simple nature of right and wrong. And when I traveled I learned the fear before a crime and the thrill of success. But I never became one of them. Bats frighten me. It's time my enemies shared my dread. It's ends here. It was a dog. It was a big dog. Well, you see... I'm buying this hotel and setting some new rules about the pool area. I seek the means to fight injustice. To turn fear against those who prey on the fearful. This isn't a car.</p>
+					<p>I'll be standing where l belong. Between you and the peopIe of Gotham. I seek the means to fight injustice. To turn fear against those who prey on the fearful. I seek the means to fight injustice. To turn fear against those who prey on the fearful. My anger outweights my guilt. Someone like you. Someone who'll rattle the cages.</p>
+					<p>I'll be standing where l belong. Between you and the peopIe of Gotham. I seek the means to fight injustice. To turn fear against those who prey on the fearful. Swear to me! I'm Batman</p>
+					<h4>Batman</h4>
+					<p>Crime Fighter</p>
+				</div>
+			</section>
+
+		</section>
 
 
 		<!-- SOCIAL MEDIA -->
