--- a/resume.html
+++ b/resume.html
@@ -6,6 +6,8 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Resume</title>
 
+	<link rel="shortcut icon" href="favicon.png">
+
 	<!-- CSS -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.css">
 	<link rel="stylesheet" href="./assets/css/styles.css">
