--- a/portfolio.html
+++ b/portfolio.html
@@ -31,6 +31,34 @@
 			<img src="./assets/img/batman-color-hi.png" alt="Batman" class="img round">
 		</header>
 
+		<!-- MAIN -->
+		<section class="projects">
+			<div>
+				<div>
+					<h3>Project 1</h3>
+					<p>But we’ve met before. That was a long time ago, I was a kid at St. Swithin’s, It used to be funded by the Wayne Foundation. It’s an orphanage. My mum died when I was small, it was a car accident. I don’t remember it.</p>
+					<a href="#">www.batman.me/project1</a>
+				</div>
+				<img src="./assets/img/3d-map-Gotham-City.jpg" alt="3d Map of Gotham City">
+			</div>
+			<div>
+				<div>
+					<h3>Project 2</h3>
+					<p>Every man who has lotted here over the centuries, has looked up to the light and imagined climbing to freedom. So easy, so simple! And like shipwrecked men turning to seawater foregoing uncontrollable thirst, many have died trying. And then here there can be no true despair without hope. </p>
+					<a href="#">www.batman.me/project2</a>
+				</div>
+				<img src="./assets/img/fear_of_gotham_by_maxasabin-dbipnzc.jpg" alt="Fear of Gotham City Batmobile">
+			</div>
+			<div>
+				<div>
+					<h3>Project 3</h3>
+					<p>But we’ve met before. That was a long time ago, I was a kid at St. Swithin’s, It used to be funded by the Wayne Foundation. It’s an orphanage. My mum died when I was small, it was a car accident. I don’t remember it. </p>
+					<a href="#">www.batman.me/project3</a>
+				</div>
+				<img src="./assets/img/new-york-city-public-library.jpg" alt="New York City Public Libary">
+			</div>
+		</section>
+
 
 		<!-- SOCIAL MEDIA -->
 		<section class="socialMedia">
