Complete resume structure

--- a/resume.html
+++ b/resume.html
@@ -16,7 +16,7 @@
 	<div class="container">
 
 		<!-- MENU -->
-		<nav class="ui menu">
+		<nav class="ui menu secondary pointing">
 			<li><a href="index.html" class="item">Hello</a></li>
 			<li><a href="resume.html" class="active item">Resume</a></li>
 			<li><a href="portfolio.html" class="item">Portfolio</a></li>
@@ -31,6 +31,155 @@
 			<img src="./assets/img/batman-color-hi.png" alt="Batman" class="img round">
 		</header>
 
+		<!-- INTRO -->
+		<section id="intro">
+			<p>Every man who has lotted here over the centuries, has looked up to the light and imagined climbing to freedom. So easy, so simple! And like shipwrecked men turning to seawater foregoing uncontrollable thirst, many have died trying. And then here there can be no true despair without hope. So as I terrorize Gotham, I will feed its people hope to poison their souls.</p>
+		</section>	
+
+		<!-- MAIN -->
+		<div class="main">
+
+			<aside id="additionalInfo">
+				<h3>Personal</h3>
+		
+				<!-- PERSONAL INFO -->
+				<table>
+					<tbody>
+						<tr class="border-bottom">
+							<td class="paLabel">Name</td>
+							<td>Bruce Wayne</td>
+						</tr>
+						<tr>
+							<td class="paLabel">Birthday</td>
+							<td>May 27th 1939</td>
+						</tr>
+						<tr>
+							<td class="paLabel">Relationship</td>
+							<td>Single</td>
+						</tr>
+						<tr>
+							<td class="paLabel">Nationality</td>
+							<td>US Citizen</td>
+						</tr>
+						<tr>
+							<td class="paLabel">Languages</td>
+							<td>English, Esperanto, Japanese</td>
+						</tr>
+						<tr>
+							<td class="paLabel">Telephone</td>
+							<td>+1(314)684-3970</td>
+						</tr>
+					</tbody>
+				</table>
+		
+				<h3>Software</h3>
+				<table>
+					<tbody>
+						<tr>
+							<td class="softwareLabel">HTML5</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td class="softwareLabel">CSS3</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td class="softwareLabel">JavaScript</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td class="softwareLabel">MongoDB</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td class="softwareLabel">Angular</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td class="softwareLabel"></td>
+							<td></td>
+						</tr>
+					</tbody>
+				</table>
+	
+				<h3>Hobbies</h3>
+				<ul class="hobbyIcons">
+					<li>
+						<i class="icon book circular big"></i>
+						<span>Reading</span>
+					</li>
+					<li>
+						<i class="icon road circular big"></i>
+						<span>Traveling</span>
+					</li>
+					<li>
+						<i class="icon laptop circular big"></i>
+						<span>Writing</span>
+					</li>
+					<li>
+						<i class="icon android circular big"></i>
+						<span>Building</span>
+					</li>
+					<li>
+						<i class="icon law circular big"></i>
+						<span>Enforcing</span>
+					</li>
+					<li>
+						<i class="icon bomb circular big"></i>
+						<span>Fight Crime</span>
+					</li>
+				</ul>
+			</aside>
+		</div>
+
+		<!-- MAIN SECTION -->
+		<section id="resumeArea">
+			<h3>Work</h3>
+	
+				<div id="work">
+					<ul>
+						<li class="workItem">
+							<span>Owner @ Wayne Enterprises</span>
+							<span class="workRight">2017</span>
+							<p>Aenean convallis mollis ligula, eget maximus erat tincidunt vehicula.</p>
+						</li>
+						<li class="workItem">
+							<span>Owner @ WayneCorp</span>
+							<span class="workRight">2015</span>
+							<p>Aenean convallis mollis ligula, eget maximus erat tincidunt vehicula.</p>
+						</li>
+						<li class="workItem">
+							<span>Philanthropist @ WayneCorp</span>
+							<span class="workRight">2013</span>
+							<p>Aenean convallis mollis ligula, eget maximus erat tincidunt vehicula.</p>
+						</li>
+					</ul>
+				</div>
+				<h3>Professional Skills</h3>
+					<ul>
+						<li><span class="skillset">Genius Intellect</span></li>
+						<li><span class="skillset">Tech Equipment</span></li>
+						<li><span class="skillset">Martial Arts</span></li>
+						<li><span class="skillset">Detective Skills</span></li>
+						<li><span class="skillset">Intimidation</span></li>
+					</ul>
+				<h3>Education</h3>
+					<div id="education">
+						<ul>
+							<li class="eduItem">
+								<span>Crime and Justice @ University of Life</span>
+								<span class="eduRight">1939</span>
+								<p>Donec condimentum sodales ipsum, eget euismod libero luctus in.</p>
+							</li>
+							<li class="eduItem">
+								<span>Technology @ Wayne Studies</span>
+								<span class="eduRight">1945</span>
+								<p>Donec condimentum sodales ipsum, eget euismod libero luctus in.</p>
+							</li>
+						</ul>
+					</div>
+			</section>
+		</div>
 
 		<!-- SOCIAL MEDIA -->
 		<section class="socialMedia">
