Add class for icons

--- a/resume.html
+++ b/resume.html
@@ -105,27 +105,27 @@
 				<h3>Hobbies</h3>
 				<ul class="hobbyIcons">
 					<li>
-						<i class="icon book circular big"></i>
+						<i class="icon book circular big light"></i>
 						<span>Reading</span>
 					</li>
 					<li>
-						<i class="icon road circular big"></i>
+						<i class="icon road circular big light"></i>
 						<span>Traveling</span>
 					</li>
 					<li>
-						<i class="icon laptop circular big"></i>
+						<i class="icon laptop circular big light"></i>
 						<span>Writing</span>
 					</li>
 					<li>
-						<i class="icon android circular big"></i>
+						<i class="icon android circular big light"></i>
 						<span>Building</span>
 					</li>
 					<li>
-						<i class="icon law circular big"></i>
+						<i class="icon law circular big light"></i>
 						<span>Enforcing</span>
 					</li>
 					<li>
-						<i class="icon bomb circular big"></i>
+						<i class="icon bomb circular big light"></i>
 						<span>Fight Crime</span>
 					</li>
 				</ul>
