Update header and footer class names

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<div class="container">
 
 		<!-- MENU -->
-		<nav class="ui menu">
+		<nav class="ui menu secondary pointing">
 			<li><a href="index.html" class="active item">Hello</a></li>
 			<li><a href="resume.html" class="item">Resume</a></li>
 			<li><a href="portfolio.html" class="item">Portfolio</a></li>
@@ -73,19 +73,19 @@
 		<section class="socialMedia">
 			<li class="socialItem">
 				<a href="" class="socialIcon">
-					<i class="icon circular big"></i>
+					<i class="icon behance circular big dark"></i>
 				</a>
 				<span class="socialLink">www.behance.com/Batman</span>
 			</li>
 			<li class="socialItem">
 				<a href="" class="socialIcon">
-					<i class="icon circular big"></i>
+					<i class="icon linkedin circular big dark"></i>
 				</a>
 				<span class="socialLink">www.linkedIn.com/Batman</span>
 			</li>
 			<li class="socialItem">
 				<a href="" class="socialIcon">
-					<i class="icon circular big"></i>
+					<i class="icon twitter circular big dark"></i>
 				</a>
 				<span class="socialLink">www.twitter.com/Batman</span>
 			</li>
@@ -94,12 +94,12 @@
 		<!-- FOOTER -->
 		<footer>
 			<section class="address">
-				<span>1007 Mountain Drive, Gotham, IL 60035 </span>
-				<span>1 (314) 684-3970</span>
-				<span>thebat@cave.com</span>
+				<p>1007 Mountain Drive, Gotham, IL 60035 </p>
+				<p><span>&bull;</span> 1 (314) 684-3970</p>
+				<p><span>&bull;</span> thebat@cave.com</p>
 			</section>
 
-			<span class="website">www.batman.com</span>
+			<p class="website">www.batman.com</p>
 		</footer>
 
 	</div>
