--- a/resume.html
+++ b/resume.html
@@ -179,25 +179,24 @@
 						</ul>
 					</div>
 			</section>
-		</div>
 
 		<!-- SOCIAL MEDIA -->
 		<section class="socialMedia">
 			<li class="socialItem">
 				<a href="" class="socialIcon">
-					<i class="icon circular big"></i>
+					<i class="icon behance circular big dark"></i>
 				</a>
 				<span class="socialLink">www.behance.com/Batman</span>
 			</li>
 			<li class="socialItem">
 				<a href="" class="socialIcon">
-					<i class="icon circular big"></i>
+					<i class="icon linkedin circular big dark"></i>
 				</a>
 				<span class="socialLink">www.linkedIn.com/Batman</span>
 			</li>
 			<li class="socialItem">
 				<a href="" class="socialIcon">
-					<i class="icon circular big"></i>
+					<i class="icon twitter circular big dark"></i>
 				</a>
 				<span class="socialLink">www.twitter.com/Batman</span>
 			</li>
@@ -206,12 +205,12 @@
 		<!-- FOOTER -->
 		<footer>
 			<section class="address">
-				<span>1007 Mountain Drive, Gotham, IL 60035 </span>
-				<span>1 (314) 684-3970</span>
-				<span>thebat@cave.com</span>
+				<p>1007 Mountain Drive, Gotham, IL 60035 </p>
+				<p><span>&bull;</span> 1 (314) 684-3970</p>
+				<p><span>&bull;</span> thebat@cave.com</p>
 			</section>
 
-			<span class="website">www.batman.com</span>
+			<p class="website">www.batman.com</p>
 		</footer>
 
 	</div>
