Update class names

--- a/resume.html
+++ b/resume.html
@@ -39,7 +39,7 @@
 		<!-- MAIN -->
 		<div class="main">
 
-			<aside id="additionalInfo">
+			<aside class="additionalInfo">
 				<h3>Personal</h3>
 		
 				<!-- PERSONAL INFO -->
@@ -130,13 +130,12 @@
 					</li>
 				</ul>
 			</aside>
-		</div>
 
-		<!-- MAIN SECTION -->
-		<section id="resumeArea">
+		<!-- MAIN INFO SECTION -->
+		<section class="mainInfo">
 			<h3>Work</h3>
 	
-				<div id="work">
+				<div class="work">
 					<ul>
 						<li class="workItem">
 							<span>Owner @ Wayne Enterprises</span>
@@ -179,7 +178,8 @@
 						</ul>
 					</div>
 			</section>
-
+		</div>
+		
 		<!-- SOCIAL MEDIA -->
 		<section class="socialMedia">
 			<li class="socialItem">
