--- a/index.html
+++ b/index.html
@@ -33,27 +33,27 @@
 
 		<!-- MAIN -->
 		<section class="main">
-			<aside class="additionalInfo">
+			<aside class="additionalInfo bg-grey">
 				<div class="hrContact">
 					<h4>To</h4>
-				<p>James Gordon </br>
-					Police Commissioner </br>
-					Gotham City Police Department </br>
-					1 Gotham County </br>
-					Gotham City </br>
-					IL 60035
-				</p>
-				<h4>Position</h4>
-				<p>Hero</p>
-				<h4>Reference No.</h4>
-				<p>APP012358869</p>
-				<h4>Date</h4>
-				<p>11th January 2018</p>
+					<p>James Gordon </br>
+						Police Commissioner </br>
+						Gotham City Police Department </br>
+						1 Gotham County </br>
+						Gotham City </br>
+						IL 60035
+					</p>
+					<h4>Position</h4>
+					<p>Hero</p>
+					<h4>Reference No.</h4>
+					<p>APP012358869</p>
+					<h4>Date</h4>
+					<p>11th January 2018</p>
 				</div>
 			</aside>
 
-			<!-- MAIN SECTION -->
-			<section class="main">
+			<!-- MAIN INFO SECTION -->
+			<section class="mainInfo">
 				<div class="coverLetter">
 					<p>Dear Commissioner Gordon</p>
 					<p>Bats frighten me. It's time my enemies shared my dread.No guns, no killing. The first time I stole so that I wouldn't starve, yes. I lost many assumptions about the simple nature of right and wrong. And when I traveled I learned the fear before a crime and the thrill of success. But I never became one of them. Someone like you. Someone who'll rattle the cages.</p>
