Add styles to software table

--- a/resume.html
+++ b/resume.html
@@ -43,7 +43,7 @@
 				<h3>Personal</h3>
 		
 				<!-- PERSONAL INFO -->
-				<table>
+				<table id="personalTbl">
 					<tbody>
 						<tr class="border-bottom">
 							<td class="paLabel">Name</td>
@@ -63,7 +63,7 @@
 						</tr>
 						<tr>
 							<td class="paLabel">Languages</td>
-							<td>English, Esperanto, Japanese</td>
+							<td>English, Esperanto, Japanese, Korean</td>
 						</tr>
 						<tr>
 							<td class="paLabel">Telephone</td>
@@ -73,30 +73,26 @@
 				</table>
 		
 				<h3>Software</h3>
-				<table>
+				<table id="softwareTbl">
 					<tbody>
-						<tr>
+						<tr class="html5">
 							<td class="softwareLabel">HTML5</td>
 							<td></td>
 						</tr>
-						<tr>
+						<tr class="css3">
 							<td class="softwareLabel">CSS3</td>
 							<td></td>
 						</tr>
-						<tr>
+						<tr class="javascript">
 							<td class="softwareLabel">JavaScript</td>
 							<td></td>
 						</tr>
-						<tr>
+						<tr class="mongodb">
 							<td class="softwareLabel">MongoDB</td>
 							<td></td>
 						</tr>
-						<tr>
+						<tr class="angular">
 							<td class="softwareLabel">Angular</td>
-							<td></td>
-						</tr>
-						<tr>
-							<td class="softwareLabel"></td>
 							<td></td>
 						</tr>
 					</tbody>
