Add work and education styling

--- a/resume.html
+++ b/resume.html
@@ -159,7 +159,7 @@
 						<li><span class="skillset">Intimidation</span></li>
 					</ul>
 				<h3>Education</h3>
-					<div id="education">
+					<div class="education">
 						<ul>
 							<li class="eduItem">
 								<span>Crime and Justice @ University of Life</span>
