--- a/resume.html
+++ b/resume.html
@@ -152,11 +152,46 @@
 				</div>
 				<h3>Professional Skills</h3>
 					<ul>
-						<li><span class="skillset">Genius Intellect</span></li>
-						<li><span class="skillset">Tech Equipment</span></li>
-						<li><span class="skillset">Martial Arts</span></li>
-						<li><span class="skillset">Detective Skills</span></li>
-						<li><span class="skillset">Intimidation</span></li>
+						<li class="skillset progress-100">
+							<span class="label">Genius Intellect</span>
+							<div class="skillProgress">
+								<div class="leftSide halfCircle"></div>
+								<div class="rightSide halfCircle"></div>
+								<div class="shadow"></div>
+							</div>
+						</li>
+						<li class="skillset progress-90">
+							<span class="label">Tech Equipment</span>
+							<div class="skillProgress">
+								<div class="leftSide halfCircle"></div>
+								<div class="rightSide halfCircle"></div>
+								<div class="shadow"></div>
+							</div>
+						</li>
+						<li class="skillset progress-78">
+							<span class="skillset">Martial Arts</span>
+							<div class="skillProgress">
+								<div class="leftSide halfCircle"></div>
+								<div class="rightSide halfCircle"></div>
+								<div class="shadow"></div>
+							</div>
+						</li>
+						<li class="skillset progress-69">
+							<span class="skillset">Detective Skills</span>
+							<div class="skillProgress">
+								<div class="leftSide halfCircle"></div>
+								<div class="rightSide halfCircle"></div>
+								<div class="shadow"></div>
+							</div>
+						</li>
+						<li class="skillset progress-57">
+							<span class="skillset">Intimidation</span>
+							<div class="skillProgress">
+								<div class="leftSide halfCircle"></div>
+								<div class="rightSide halfCircle"></div>
+								<div class="shadow"></div>
+							</div>
+						</li>
 					</ul>
 				<h3>Education</h3>
 					<div class="education">
