Correct class names

--- a/resume.html
+++ b/resume.html
@@ -151,7 +151,7 @@
 					</ul>
 				</div>
 				<h3>Professional Skills</h3>
-					<ul>
+					<ul class="skills">
 						<li class="skillset progress-100">
 							<span class="label">Genius Intellect</span>
 							<div class="skillProgress">
@@ -169,7 +169,7 @@
 							</div>
 						</li>
 						<li class="skillset progress-78">
-							<span class="skillset">Martial Arts</span>
+							<span class="label">Martial Arts</span>
 							<div class="skillProgress">
 								<div class="leftSide halfCircle"></div>
 								<div class="rightSide halfCircle"></div>
@@ -177,7 +177,7 @@
 							</div>
 						</li>
 						<li class="skillset progress-69">
-							<span class="skillset">Detective Skills</span>
+							<span class="label">Detective Skills</span>
 							<div class="skillProgress">
 								<div class="leftSide halfCircle"></div>
 								<div class="rightSide halfCircle"></div>
@@ -185,7 +185,7 @@
 							</div>
 						</li>
 						<li class="skillset progress-57">
-							<span class="skillset">Intimidation</span>
+							<span class="label">Intimidate</span>
 							<div class="skillProgress">
 								<div class="leftSide halfCircle"></div>
 								<div class="rightSide halfCircle"></div>
